# wagtail-traverse

./: .gitignore  LICENSE  README.md  pyproject.toml  testmanage.py  tox.ini
.github/workflows/: publish.yml  test.yml
wagtailtraverse/: __init__.py  traverse.py
wagtailtraverse/tests/: settings.py  test_traverse.py  urls.py
wagtailtraverse/tests/testapp/: models.py
