[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-traverse"
dynamic = ["version"]
description = "Utilities for traversing Wagtail StreamField block definitions and values"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Will Barton", email = "pypi@willbarton.com" }
]
requires-python = ">=3.13"
dependencies = [
    "wagtail>=6.3",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
testing = [
    "coverage[toml]",
]

[project.urls]
"Homepage" = "https://github.com/willbarton/wagtail-traverse"
"Bug Reports" = "https://github.com/willbarton/wagtail-traverse/issues"
"Source" = "https://github.com/willbarton/wagtail-traverse"

[tool.setuptools_scm]

[tool.coverage.run]
source = ["wagtailtraverse"]

[tool.ruff]
# Use PEP8 line-length
line-length = 79
# Exclude common paths
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "**/migrations/*.py",
]

[tool.ruff.lint]
ignore = ["E731", ]
# Select specific rulesets to use
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["jinja2"]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
]
